--- a/android/key.properties
+++ b/android/key.properties
@@ -1,4 +1,4 @@
 storePassword=Dimple@1503
 keyPassword=Dimple@1503
 keyAlias=kgms_user
-storeFile=kgms_user-keystore.jks
+storeFile=../app/release-key.jks
