--- a/android/local.properties
+++ b/android/local.properties
@@ -1,26 +1,7 @@
-# This file contains machine-specific paths and API keys
-# DO NOT commit this file to version control
-# DO NOT share this file with anyone
-# ADD THIS FILE TO .gitignore
-
-# Android SDK paths (auto-generated)
-sdk.dir=C:\\Users\\manju\\AppData\\Local\\Android\\sdk
-ndk.dir=C:\\Users\\manju\\AppData\\Local\\Android\\sdk\\ndk\\27.0.12077973
-
-# Flutter SDK path
-flutter.sdk=C:\\flutter
+sdk.dir=C:\\Users\\gopal\\AppData\\Local\\Android\\sdk
+ndk.dir=C:\\Users\\gopal\\AppData\\Local\\Android\\Sdk\\ndk\\27.0.12077973
+flutter.sdk=C:\\src\\flutter
 flutter.buildMode=release
 flutter.versionName=1.0.0
 flutter.versionCode=1
-
-# ? SECURITY WARNING ?
-# NEVER use: AIzaSyCMADwyS3eoxJ5dQ_iFiWcDBA_tJwoZosw (COMPROMISED - DELETED)
-# Generate a NEW API key from Google Cloud Console
-
-# Google Maps API Keys - REPLACE WITH YOUR NEW SECURE KEYS
-GOOGLE_MAPS_API_KEY_DEBUG=AIzaSyCMADwyS3eoxJ5dQ_iFiWcDBA_tJwoZosw
-GOOGLE_MAPS_API_KEY_PROD=AIzaSyCMADwyS3eoxJ5dQ_iFiWcDBA_tJwoZosw
-
-# Optional: Other configurations
-# FIREBASE_API_KEY=your_firebase_key_here
-# BACKEND_API_URL=https://your-api.example.com
+googleMapsApiKey="AIzaSyDcEBHY-4sTUz254VZ9OD3Xr-7462LvBts"
